Fixed things somehow not working cuz of course they dirfdnt